Primer post fet

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h3 class = 'post_link'>
       <a href='https://unaicervantes.github.io/Projecte05/posts/primer/'>Blog xarxes</a>
     </h3>
-    <p class = 'pale'>Aquesta és la pàgina que faré servir com a blog per el projecte 5.</p>
+    <p class = 'pale'>En aquest projecte hem de crear un domini de correu electrònic mitjançant poste.io. Per …</p>
   </div>
 </li>
 
