--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <ul class='posts wrap' id = 'posts'>
 <li class = 'post_item'>
-  <a class = 'post_card' href='https://unaicervantes.github.io/Projecte05/posts/primer/' title = 'Blog xarxes' style = 'background-image: url(https://unaicervantes.github.io/Projecte05/images/thumbnail.svg);'>
+  <a class = 'post_card' href='https://unaicervantes.github.io/Projecte05/posts/primer/' title = 'Primera entrada' style = 'background-image: url(https://unaicervantes.github.io/Projecte05/images/thumbnail.svg);'>
   </a>
   <div class = 'excerpt'>
     <div class = 'excerpt_meta'><div class = 'copy' data-share = 'Copy' data-copied = 'Copied'><svg>
@@ -70,7 +70,7 @@
 
     </div>
     <h3 class = 'post_link'>
-      <a href='https://unaicervantes.github.io/Projecte05/posts/primer/'>Blog xarxes</a>
+      <a href='https://unaicervantes.github.io/Projecte05/posts/primer/'>Primera entrada</a>
     </h3>
     <p class = 'pale'>En aquest projecte hem de crear un domini de correu electrònic mitjançant poste.io. Per …</p>
   </div>
