--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
 
 <ul class='posts wrap' id = 'posts'>
 <li class = 'post_item'>
+  <a class = 'post_card' href='https://unaicervantes.github.io/Projecte05/posts/certificat&#43;curl/' title = 'Certificat&#43;curl' style = 'background-image: url(https://unaicervantes.github.io/Projecte05/images/thumbnail.svg);'>
+  </a>
+  <div class = 'excerpt'>
+    <div class = 'excerpt_meta'><div class = 'copy' data-share = 'Copy' data-copied = 'Copied'><svg>
+  <use xlink:href="#copy"></use>
+</svg>
+</div>
+
+    </div>
+    <h3 class = 'post_link'>
+      <a href='https://unaicervantes.github.io/Projecte05/posts/certificat&#43;curl/'>Certificat&#43;curl</a>
+    </h3>
+    <p class = 'pale'>Certificat amb mkcert i administració del domini amb curl En aquest post crearé el …</p>
+  </div>
+</li>
+
+<li class = 'post_item'>
   <a class = 'post_card' href='https://unaicervantes.github.io/Projecte05/posts/instalacio_domini/' title = 'Instalacio domini i adminstració bàsica d&#39;usuaris' style = 'background-image: url(https://unaicervantes.github.io/Projecte05/images/thumbnail.svg);'>
   </a>
   <div class = 'excerpt'>
